@@ -4,6 +4,8 @@ import academic.model.Course;
 import academic.model.Enrollment;
 import academic.model.Student;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Scanner;
 
@@ -37,12 +39,7 @@ public class Driver2 {
                             String grade = segments[4];
                             if (!isCourseExist(courses, code)) {
                                 courses.add(new Course(code, name, credits, grade));
-                                // System.out.println("Added course: " + code);
-                            } else {
-                                // System.out.println("Course already exists: " + code);
                             }
-                        } else {
-                            // System.out.println("Invalid input format for course-add. Please enter data in the format: course-add#code#name#credits#grade");
                         }
                         break;
                     case "student-add":
@@ -53,12 +50,7 @@ public class Driver2 {
                             String prodi = segments[4];
                             if (!isStudentExist(students, nim)) {
                                 students.add(new Student(nim, nama, angkatan, prodi));
-                                // System.out.println("Added student: " + nim);
-                            } else {
-                                // System.out.println("Student already exists: " + nim);
                             }
-                        } else {
-                            // System.out.println("Invalid input format for student-add. Please enter data in the format: student-add#nim#nama#angkatan#prodi");
                         }
                         break;
                     case "enrollment-add":
@@ -71,39 +63,59 @@ public class Driver2 {
                                 if (isCourseExist(courses, courseCode)) {
                                     if (isStudentExist(students, studentNim)) {
                                         enrollments.add(new Enrollment(courseCode, studentNim, academicYear, semester));
-                                        // System.out.println("Added enrollment: " + courseCode + " - " + studentNim);
                                     } else {
                                         System.out.println("invalid student|" + studentNim);
                                     }
                                 } else {
                                     System.out.println("invalid course|" + courseCode);
                                 }
-                            } else {
-                                // System.out.println("Enrollment already exists: " + courseCode + " - " + studentNim);
                             }
-                        } else {
-                            // System.out.println("Invalid input format for enrollment-add. Please enter data in the format: enrollment-add#courseCode#studentNim#academicYear#semester");
                         }
                         break;
                     default:
-                        // System.out.println("Unknown command: " + command);
                         break;
                 }
-            } else {
-                // System.out.println("Invalid input format. Please enter a valid command.");
             }
         }
 
+        // Mengurutkan daftar courses berdasarkan kode mata kuliah
+        Collections.sort(courses, new Comparator<Course>() {
+            @Override
+            public int compare(Course c1, Course c2) {
+                return c1.getCode().compareTo(c2.getCode());
+            }
+        });
+
+        // Mengurutkan daftar students berdasarkan NIM
+        Collections.sort(students, new Comparator<Student>() {
+            @Override
+            public int compare(Student s1, Student s2) {
+                return s1.getNim().compareTo(s2.getNim());
+            }
+        });
+
+        // Mengurutkan daftar enrollments berdasarkan courseCode dan studentNim
+        Collections.sort(enrollments, new Comparator<Enrollment>() {
+            @Override
+            public int compare(Enrollment e1, Enrollment e2) {
+                int courseComparison = e1.getCourseCode().compareTo(e2.getCourseCode());
+                if (courseComparison != 0) {
+                    return courseComparison;
+                }
+                return e1.getStudentNim().compareTo(e2.getStudentNim());
+            }
+        });
+
         for (Course course : courses) {
-            System.out.println(course);
+            System.out.println(course.getCode() + "|" + course.getName() + "|" + course.getCredits() + "|" + course.getGrade());
         }
 
         for (Student student : students) {
-            System.out.println(student);
+            System.out.println(student.getNim() + "|" + student.getNama() + "|" + student.getAngkatan() + "|" + student.getProdi());
         }
 
         for (Enrollment enrollment : enrollments) {
-            System.out.println(enrollment);
+            System.out.println(enrollment.getCourseCode() + "|" + enrollment.getStudentNim() + "|" + enrollment.getAcademicYear() + "|" + enrollment.getSemester() + "|" + enrollment.getGrade());
         }
 
         scanner.close();
