@@ -24,3 +24,5 @@ enrollment-add#12S2203#12S20111#2020/2021#even
 12S2203|12S20999|2021/2022|even|None
 12S2203|12S20111|2020/2021|even|None
 ",
+
+telah memperbaiki driver2
